--- a/SkillMintt/cnt/package.json
+++ b/SkillMintt/cnt/package.json
@@ -17,6 +17,7 @@
     "razorpay": "^2.9.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
     "react-type-animation": "^3.2.0"
